--- a/src/main/frontend/themes/dejonghe-app/styles.css
+++ b/src/main/frontend/themes/dejonghe-app/styles.css
@@ -22,10 +22,15 @@ vaadin-horizontal-layout.selected{
 }
 
 vaadin-grid::part(remark) {
-    background-color: orange;
+    background-color: yellow;
 }
 
 vaadin-grid::part(attachement) {
+    background-color: lightblue;
+}
+
+vaadin-grid::part(row).bold-row {
+    font-weight: bold;
     background-color: lightblue;
 }
 
@@ -51,7 +56,7 @@ vaadin-combo-box::part(input-field) {
 }
 
 /* Wanneer de combobox GEEN placeholder toont (dus waarde ingevuld) */
-vaadin-combo-box[has-value]::part(input-field) {
+vaadin-combo-box.highlight-border[has-value]::part(input-field) {
     border: 2px solid green;
 }
 
@@ -59,6 +64,18 @@ vaadin-combo-box[has-value]::part(input-field) {
 vaadin-combo-box:not([has-value])::part(input-field) {
     /*border: 2px dashed grey;*/ /* voorbeeld */
 }
+
+.attached[checked]::part(checkbox) {
+    background-color: black;
+    --lumo-primary-contrast-color: black;
+}
+
+.my-checkbox[checked]::part(checkbox) {
+    background-color: lightgray;
+    --lumo-primary-contrast-color: black;
+}
+
+
 
 
 
